# cua

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  AGENTS.md  CONTRIBUTING.md  Development.md  Dockerfile  LICENSE.md  Makefile  README.md  TESTING.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json
.github/: FUNDING.yml
.github/scripts/: get_pyproject_version.py
.github/scripts/tests/: README.md  __init__.py  test_get_pyproject_version.py
.github/workflows/: bump-version-agent.yml  bump-version-computer-server.yml  bump-version-computer.yml  bump-version-core.yml  bump-version-mcp-server.yml  bump-version-pylume.yml  bump-version-reusable.yml  bump-version-som.yml  bump-version.yml  docker-publish-kasm.yml  docker-publish-xfce.yml  docker-reusable-publish.yml  lint.yml  pypi-reusable-publish.yml  python-tests.yml  test-cua-models.yml  test-validation-script.yml
blog/: app-use.md  bringing-computer-use-to-the-web.md  build-your-own-operator-on-macos-1.md  build-your-own-operator-on-macos-2.md  composite-agents.md  cua-hackathon.md  hack-the-north.md  hud-agent-evals.md  human-in-the-loop.md  introducing-cua-cloud-containers.md  lume-to-containerization.md  sandboxed-python-execution.md  training-computer-use-models-trajectories-1.md  trajectory-viewer.md  ubuntu-docker-support.md  windows-sandbox.md
docs/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  source.config.ts
docs/content/docs/: index.mdx  meta.json  quickstart-cli.mdx  quickstart-devs.mdx  quickstart-ui.mdx  telemetry.mdx
docs/plans/: 2025-10-25-version-bump-workflows-design.md  2025-10-25-version-bump-workflows.md
docs/src/: mdx-components.tsx
examples/: agent_examples.py  cloud_api_examples.py  computer_examples.py  computer_examples_windows.py  computer_ui_examples.py  docker_examples.py  docker_two_computers.py  pylume_examples.py  sandboxed_functions_examples.py  som_examples.py  utils.py  winsandbox_example.py
examples/computer-example-ts/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
examples/evals/: hud_eval_examples.py
libs/docker-xfce/: Dockerfile  Dockerfile.slim  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  example.py
libs/kasm/: Dockerfile  LICENSE  README.md
libs/lume/: CONTRIBUTING.md  Development.md  README.md
libs/lumier/: README.md
libs/python/agent/: .bumpversion.cfg  README.md  example.py  pyproject.toml
libs/python/agent/agent/: __init__.py  __main__.py  agent.py  cli.py  decorators.py  responses.py  telemetry.py  types.py
libs/python/agent/agent/adapters/: __init__.py  huggingfacelocal_adapter.py  human_adapter.py  mlxvlm_adapter.py
libs/python/agent/agent/adapters/models/: __init__.py  generic.py  internvl.py  opencua.py  qwen2_5_vl.py
libs/python/agent/agent/callbacks/: __init__.py  base.py  budget_manager.py  image_retention.py  logging.py  operator_validator.py  pii_anonymization.py  prompt_instructions.py  telemetry.py  trajectory_saver.py
libs/python/agent/agent/computers/: __init__.py  base.py  cua.py  custom.py
libs/python/agent/agent/human_tool/: __init__.py  __main__.py  server.py  ui.py
libs/python/agent/agent/integrations/hud/: __init__.py  agent.py  proxy.py
libs/python/agent/agent/loops/: __init__.py  anthropic.py  base.py  composed_grounded.py  gemini.py  glm45v.py  gta1.py  holo.py  internvl.py  moondream3.py  omniparser.py  openai.py  opencua.py  qwen.py  uitars.py
libs/python/agent/agent/proxy/: README.md  __init__.py  cli.py  examples.py  handlers.py  p2p_server.py  server.py
libs/python/agent/agent/ui/: __init__.py  __main__.py
libs/python/agent/agent/ui/gradio/: app.py  ui_components.py
libs/python/agent/benchmarks/: README.md  contrib.md  interactive.py  ss-pro.py  ss-v2.py  utils.py
libs/python/agent/benchmarks/models/: base.py  gta1.py
libs/python/agent/tests/: __init__.py  conftest.py  test_computer_agent.py
libs/python/computer-server/: .bumpversion.cfg  README.md  pyproject.toml  run_server.py  test_connection.py
libs/python/computer-server/computer_server/: __main__.py  cli.py  main.py  server.py  watchdog.py
libs/python/computer-server/computer_server/diorama/: base.py  diorama.py  diorama_computer.py  draw.py  macos.py  safezone.py
libs/python/computer-server/computer_server/handlers/: base.py  factory.py  generic.py  linux.py  macos.py  windows.py
libs/python/computer-server/tests/: __init__.py  conftest.py  test_server.py
libs/python/core/: .bumpversion.cfg  README.md  pyproject.toml
libs/python/core/core/: __init__.py
libs/python/core/core/telemetry/: __init__.py  posthog.py  posthog_client.py  telemetry.py
libs/python/core/tests/: __init__.py  conftest.py  test_telemetry.py
libs/python/pylume/: .bumpversion.cfg  README.md  __init__.py  pyproject.toml
libs/python/pylume/pylume/: __init__.py  client.py  exceptions.py  models.py  pylume.py  server.py
libs/python/pylume/tests/: __init__.py  conftest.py  test_pylume.py
libs/python/som/: .bumpversion.cfg  LICENSE  README.md  pyproject.toml
libs/python/som/som/: __init__.py  detect.py  detection.py  models.py  ocr.py  visualization.py
libs/python/som/som/util/: utils.py
libs/python/som/tests/: __init__.py  conftest.py  test_omniparser.py
libs/typescript/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
libs/xfce/: Dockerfile  README.md
notebooks/: README.md  agent_nb.ipynb  composite_agents_docker_nb.ipynb  computer_nb.ipynb  computer_server_nb.ipynb  customizing_computeragent.ipynb  eval_osworld.ipynb  hud_hackathon.ipynb  ollama_nb.ipynb  sota_hackathon.ipynb  sota_hackathon_cloud.ipynb
notebooks/blog/: build-your-own-operator-on-macos-2.ipynb
scripts/: build-uv.sh  playground-docker.sh  playground.sh  run-docker-dev.sh  typescript-typecheck.js
tests/: shell_cmd.py  test_files.py  test_mcp_server_session_management.py  test_mcp_server_streaming.py  test_shell_bash.py  test_telemetry.py  test_venv.py  test_watchdog.py
tests/agent_loop_testing/: README.md  agent_test.py
(+172 files in other folders)
