[project]
authors = [{ name = "TryCua", email = "gh@trycua.com" }]
dependencies = [
    "openai<1.100.0",
    "anthropic>=0.67.0",
]
description = "CUA (Computer Use Agent) mono-repo"
license = { text = "MIT" }
name = "cua-workspace"
readme = "README.md"
requires-python = "<3.14,>=3.12"
version = "0.1.0"

[project.urls]
repository = "https://github.com/trycua/cua"

[dependency-groups]
dev = [
    "cua-core",
    "cua-agent",
    "cua-computer",
    "cua-computer-server",
    "cua-som",
    "cua-mcp-server",
    "black>=23.0.0",
    "ipykernel>=6.29.5",
    "jedi>=0.19.2",
    "jupyter>=1.0.0",
    "mypy>=1.10.0",
    "ruff>=0.9.2",
    "types-requests>=2.31.0",
    "hud-python[agent]==0.4.52",
    "pre-commit>=4.3.0",
    "isort>=7.0.0",
]
docs = [
    "mkdocs-material>=9.2.0",
    "mkdocs>=1.5.0",
]
test = [
    "aioresponses>=0.7.4",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.0.0",
]
examples = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "libs/python/agent",
    "libs/python/core",
    "libs/python/computer",
    "libs/python/computer-server",
    "libs/python/som",
    "libs/python/mcp-server",
]

[tool.uv.sources]
cua-agent = { workspace = true }
cua-core = { workspace = true }
cua-computer = { workspace = true }
cua-computer-server = { workspace = true }
cua-som = { workspace = true }
cua-mcp-server = { workspace = true }

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
fix = true
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = [
    "E501", "E402", "I001", "I002", "B007", "B023", "B024", "B027", "B028",
    "B904", "B905", "E711", "E712", "E722", "E731", "F401", "F403", "F405",
    "F811", "F821", "F841"
]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
python_version = "3.12"
show_error_codes = true
strict = true
warn_return_any = true
warn_unused_ignores = false

[tool.isort]
profile = "black"
py_version = 312

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "test_*.py"
testpaths = ["libs/*/tests"]