[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "cua-agent"
version = "0.4.36"
description = "CUA (Computer Use) Agent for AI-driven computer interaction"
readme = "README.md"
authors = [
    { name = "TryCua", email = "gh@trycua.com" }
]
dependencies = [
    "httpx>=0.27.0",
    "aiohttp>=3.9.3",
    "asyncio",
    "anyio>=4.4.1",
    "typing-extensions>=4.12.2",
    "pydantic>=2.6.4",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "cua-computer>=0.4.0,<0.5.0",
    "cua-core>=0.1.8,<0.2.0",
    "certifi>=2024.2.2",
    "litellm>=1.74.12"
]
requires-python = ">=3.12"

[project.optional-dependencies]
openai = []
anthropic = []
qwen = [
    "qwen-vl-utils",
    "qwen-agent",
    "Pillow>=10.0.0",
]
omni = [
    "cua-som>=0.1.0,<0.2.0",
]
uitars = []
uitars-mlx = [
    "mlx-vlm>=0.1.27; sys_platform == 'darwin'"
]
uitars-hf = [
    "accelerate",
    "torch",
    "transformers>=4.54.0"
]
glm45v-hf = [
    "accelerate",
    "torch",
    "transformers-v4.55.0-GLM-4.5V-preview"
]
opencua-hf = [
    "accelerate",
    "torch",
    "transformers>=4.53.0",
    "tiktoken>=0.11.0",
    "blobfile>=3.0.0"
]
internvl-hf = [
    "accelerate",
    "torch",
    "transformers>=4.55.0",
    "einops",
    "timm"
]
moondream3 = [
    "accelerate",
    "torch",
    "transformers>=4.55.0"
]
ui = [
    "gradio>=5.23.3",
    "python-dotenv>=1.0.1",
]
cli = [
    "yaspin>=3.1.0",
]
hud = [
    "hud-python==0.4.52",
]
gemini = [
    "google-genai>=1.41.0",
]
all = [
    # uitars requirements
    "mlx-vlm>=0.1.27; sys_platform == 'darwin'",
    "accelerate",
    "torch",
    "transformers>=4.55.0",
    # internvl requirements,
    "einops",
    "timm",
    # opencua requirements
    "tiktoken>=0.11.0",
    "blobfile>=3.0.0",
    # ui requirements
    "gradio>=5.23.3",
    "python-dotenv>=1.0.1",
    # cli requirements
    "yaspin>=3.1.0",
    # hud requirements
    "hud-python==0.4.52",
    # gemini requirements
    "google-genai>=1.41.0",
    # qwen requirements
    "qwen-vl-utils",
    "qwen-agent",
    "Pillow>=10.0.0",
]

[tool.uv]
constraint-dependencies = ["fastrtc>0.43.0", "mlx-audio>0.2.3"]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["agent/"]