[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "cua-core"
version = "0.1.9"
description = "Core functionality for Cua including telemetry and shared utilities"
readme = "README.md"
authors = [
    { name = "TryCua", email = "gh@trycua.com" }
]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "posthog>=3.20.0"
]
requires-python = ">=3.12"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["core/"]
source-includes = ["tests/", "README.md", "LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
[dependency-groups]
dev = [
    "pytest>=8.3.5",
]