[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "cua-som"
version = "0.1.3"
description = "Computer Vision and OCR library for detecting and analyzing UI elements"
authors = [
    { name = "TryCua", email = "gh@trycua.com" }
]
dependencies = [
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "ultralytics>=8.1.28",
    "easyocr>=1.7.1",
    "numpy>=1.26.4",
    "pillow>=10.2.0",
    "setuptools>=75.8.1",
    "opencv-python-headless>=4.11.0.86",
    "matplotlib>=3.8.3",
    "huggingface-hub>=0.21.4",
    "supervision>=0.25.1",
    "typing-extensions>=4.9.0",
    "pydantic>=2.6.3"
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
keywords = ["computer-vision", "ocr", "ui-analysis", "icon-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition"
]

[project.urls]
Homepage = "https://github.com/trycua/cua"
Repository = "https://github.com/trycua/cua"
Documentation = "https://github.com/trycua/cua/tree/main/docs"

[tool.pdm]
distribution = true
package-type = "library"
src-layout = false

[tool.pdm.build]
includes = ["som/"]
source-includes = ["tests/", "README.md", "LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"